--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.less
@@ -302,6 +302,9 @@
                 .displayInlineFlex;
             }
 
+            @media (max-width: 767px) {
+                display: none;
+            }
         }
 
         md-icon {
