--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -444,6 +444,10 @@
                             font-size: 12px;
                             padding: 0;
                         }
+
+                        .name, .badges {
+                            white-space: nowrap;
+                        }
                     }
                 }
             }
