--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -89,7 +89,8 @@ md-menu-item {
                 width: 16px;
                 height: 16px;
             }
-            md-icon{
+
+            md-icon {
                 margin: 0 auto;
             }
         }
@@ -331,13 +332,24 @@ md-menu-item {
                 display: inline-block;
                 white-space: nowrap;
             }
-            .date{
+
+            .date {
                 padding-right: 5px;
+            }
+
+            span {
+                color: @backgroundColorBlack;
             }
         }
 
-        span {
-            color: @backgroundColorBlack;
+        .achievements {
+            color: @buttonColorBlue;
+            padding-left: 0;
+            margin-top: 4px;
+
+            .separator {
+                background: @buttonColorBlue;
+            }
         }
     }
 
@@ -346,7 +358,8 @@ md-menu-item {
         height: ~"calc(100vh - 175px)";
         width: ~"calc(100% - 40px)";
         max-width: 760px;
-        background:#fff;
+        background: #fff;
+
         @media (max-width: 600px) {
             width: ~"calc(100% - 20px)";
         }
@@ -368,11 +381,9 @@ md-menu-item {
     .comments-section > .menu-icon {
         z-index: 2;
     }
-
     /*.comments-wrapper {
         
     }*/
-
     .commentsMenu {
         width: 20px;
         height: 20px;
@@ -499,7 +510,7 @@ md-menu-item {
                 padding: 0;
                 line-height: 28px;
 
-                &[disabled]{
+                &[disabled] {
                     color: @textColorGrey;
                 }
             }
@@ -655,8 +666,9 @@ md-menu-item {
         position: fixed;
         right: ~"calc(50% - 650px)";
         top: @heightOfHeader + @actionsNavHeight + 5;
-        width:160px;
-        height:600px;
+        width: 160px;
+        height: 600px;
+
         @media(max-width: 1279px) {
             display: none;
         }
@@ -666,9 +678,9 @@ md-menu-item {
         max-width: 970px;
         text-align: center;
         //display: inline;
-        width:100%;
-        height:98px;
-        margin:0 auto 20px auto;
+        width: 100%;
+        height: 98px;
+        margin: 0 auto 20px auto;
     }
 
     .hideActions {
