--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -846,3 +846,17 @@ md-menu-item {
         }
     }
 }
+
+
+.like-toaster-template {
+    background: @gamificationYellow;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 9999;
+
+    md-icon {
+        width: 20px;
+        height: 20px;
+    }
+}
