--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
@@ -110,7 +110,7 @@
     </div>
 </script>
 <script defer type="text/ng-template" id="likeToasterTemplate.html">
-    <div>
+    <div class="like-toaster-template">
         <div class="">@ItemsResources.LikeToasterText</div>
         <button class="fb-like content-wrapper" user-not-register-popup="click" type="button" ga-track-event="['itemPage', 'like item']">
             <span><md-icon md-svg-icon="b:like"></md-icon></span>
