--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -77,7 +77,7 @@ md-menu-item {
 
 
             a {
-                margin: 0 15px;
+                margin: 0 10px;
                 display: inline-block;
             }
 
@@ -164,6 +164,7 @@ md-menu-item {
                                 margin: 0;
                                 min-height: 0;
                                 padding: 0;
+                                width: 30px;
                             }
                         }
                     }
@@ -295,7 +296,7 @@ md-menu-item {
 
         .info {
             line-height: 0;
-            margin-left: 10px;
+            margin: 0 15px;
             position: relative;
             cursor: pointer;
 
@@ -849,14 +850,110 @@ md-menu-item {
 
 
 .like-toaster-template {
-    background: @gamificationYellow;
     width: 100%;
     position: fixed;
     top: 0;
-    z-index: 9999;
+    z-index: 11;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+    padding: 0;
 
-    md-icon {
-        width: 20px;
-        height: 20px;
+    .md-toast-content {
+        background: @gamificationYellow;
+    }
+
+    .wrapper {
+        width: 100%;
+        max-width: 860px;
+        padding: 0 80px 0 10px;
+        margin: 0 auto;
+        height: @heightOfHeader;
+
+        @media(max-width: 960px) {
+            padding: 0 44px 0 48px;
+        }
+
+        @media(max-width: 900px) {
+            padding: 0 0 0 62px;
+            max-width: 800px;
+        }
+
+        @media(max-width: 600px) {
+            padding-left: 10px;
+        }
+
+        .like-area {
+            .displayFlex;
+            .align-items(center);
+            .justifyContet(flex-start);
+            font-size: 18px;
+            font-weight: bold;
+            color: #777471;
+
+            .text {
+                margin-bottom: -2px;
+
+                @media(max-width: 600px) {
+                    font-size: 14px;
+                }
+            }
+
+            button {
+                > div {
+                    .displayFlex;
+                    .align-items(center);
+                    .justifyContet(center);
+                    width: 92px;
+                    background: @textColorWhite;
+                    border-radius: 5px;
+                    margin-left: 10px;
+                    font-weight: normal;
+
+                    @media(max-width: 600px) {
+                        width: 76px;
+                    }
+
+                    .button-text {
+                        font-size: 16px;
+                        margin-bottom: -2px;
+                        line-height: 30px;
+                        color: #777471;
+
+                        @media(max-width: 600px) {
+                            font-size: 14px;
+                        }
+                    }
+
+                    md-icon {
+                        fill: #777471;
+                        width: 20px;
+                        height: 20px;
+                        margin-right: 10px;
+
+                        @media(max-width: 600px) {
+                            width: 16px;
+                            height: 16px;
+                        }
+                    }
+                }
+
+                &.blue {
+                    > div {
+                        background: @buttonColorBlue;
+
+                        .button-text {
+                            color: @textColorWhite;
+                        }
+
+                        md-icon {
+                            fill: @textColorWhite;
+                        }
+                    }
+                }
+            }
+        }
+
+        md-icon {
+            fill: @textColorGrey;
+        }
     }
 }
