--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -859,6 +859,10 @@ md-menu-item {
 
     .md-toast-content {
         background: @gamificationYellow;
+
+        @media (min-width: 1920px) {
+            max-width: 100%;
+        }
     }
 
     .wrapper {
