User page flashcards.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -110,12 +110,19 @@
                         <div class="number" ng-bind="::u.details.numQuiz | megaNumber"></div>
                     </md-tab-label>
                 </md-tab>
+                <md-tab ui-sref="user.flashcard" md-active="u.isActive('user.flashcard')">
+                    <md-tab-label>
+                        <h3>@FlashcardResources.CardsLabel</h3>
+                        <div class="number" ng-bind="::u.details.numFlashcard | megaNumber"></div>
+                    </md-tab-label>
+                </md-tab>
                 <md-tab ui-sref="user.classmates" md-active="u.isActive('user.classmates')">
                     <md-tab-label>
                         <h3>@GeneralResources.Members</h3>
                         <div class="number" ng-bind="::u.details.numFriend | megaNumber"></div>
                     </md-tab-label>
                 </md-tab>
+                
             </md-tabs>
             <div class="page-animation" ui-view></div>
         </div>
