--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
@@ -14,7 +14,7 @@
     </div>
     <div class="users" layout="row" layout-padding layout-wrap vs-repeat="94" vs-scroll-parent="window">
         <div class="user-data" ng-repeat="user in g.leaderboard track by user.id">
-            <div class="rank" ng-bind="::$index+1 + startIndex"></div>
+            <div class="rank" ng-bind="::(user.location || $index+1 + startIndex)"></div>
             <a class="img-wrapper" ng-attr-id="{{'user_' + user.id}}" ui-sref="user({userId:user.id,userName:user.name})">
                 <user-image class="img-responsive" name="user.name" image="user.image" width="68" height="68"></user-image>
             </a>
