--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/_FlagItem.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/_FlagItem.cshtml
@@ -12,6 +12,7 @@
                 <md-option value="@BadItem.Porn">@BadItem.Porn.GetEnumDescription()</md-option>
                 <md-option value="@BadItem.Attack">@BadItem.Attack.GetEnumDescription()</md-option>
                 <md-option value="@BadItem.Hate">@BadItem.Hate.GetEnumDescription()</md-option>
+                <md-option value="@BadItem.CannotView">@BadItem.CannotView.GetEnumDescription()</md-option>
                 <md-option value="@BadItem.Other">@BadItem.Other.GetEnumDescription()</md-option>
             </md-select>
         </md-input-container>
